# nn-imx

./: Android.mk  Android.mk.def  LICENSE  NOTICE  SCR.txt  android_update_gpu_libs.sh  common.target  make.sh  makefile  makefile.linux.def
OVXLIB/: vsi_nn_tensor_util.h
OVXLIB/interface/: ops.def
OVXLIB/kernel/: vsi_nn_kernel_gpu_shape_optimize.h
include/OVXLIB/: vsi_nn_error.h  vsi_nn_graph.h  vsi_nn_internal_node.h  vsi_nn_node_type.h  vsi_nn_pre_post_process.h  vsi_nn_rnn.h  vsi_nn_rnn_helper.h  vsi_nn_rnn_prv.h  vsi_nn_tensor_util.h  vsi_nn_types.h  vsi_nn_version.h
include/nnrt/: compilation.hpp  execution.hpp  float16.hpp  model.hpp  ovxlib_delegate.hpp  permute_vector.hpp  prepared_model.hpp  types.hpp  version.hpp
nn_runtime/android_hal/: Android.mk  CustomizeOpSupportList.h  LICENSE  VsiBurstExecutor.cpp  VsiBurstExecutor.h  VsiDevice.cpp  VsiDevice.h  VsiDevice1_2.cpp  VsiDevice1_2.h  VsiDriver.cpp  VsiDriver.h  VsiDriver.rc  VsiDriver1_2.rc  VsiDriver1_3.rc  VsiPlatform.h  VsiPreparedModel.cpp  VsiPreparedModel.h  VsiPreparedModel1_2.cpp  VsiPreparedModel1_2.h  VsiRTInfo.cpp  VsiRTInfo.h  android.hardware.neuralnetworks@1.2-service-vsi-npu-server.xml  android.hardware.neuralnetworks@1.3-service-vsi-npu-server.xml  ovxdriver.vcxproj
nn_runtime/armnn_backend_vsi_npu/: BUILD  CMakeLists.txt  NpuBackend.cpp  NpuBackend.hpp  NpuBackendContext.cpp  NpuBackendContext.hpp  NpuBackendId.hpp  NpuDynamicBackend.cpp  NpuDynamicBackend.hpp  NpuLayerSupport.cpp  NpuLayerSupport.hpp  NpuModelShell.cpp  NpuModelShell.hpp  NpuStaticRegistry.cpp  NpuTensorAllocator.cpp  NpuTensorAllocator.hpp  NpuTensorHandler.cpp  NpuTensorHandler.hpp  NpuWorkloadFactory.cpp  NpuWorkloadFactory.hpp  arm_nn_interpreter.cpp  arm_nn_interpreter.hpp  backend.cmake  backend.mk
nn_runtime/armnn_backend_vsi_npu/dynamic/: CMakeLists.txt  NpuDynamicBackend.cpp
nn_runtime/armnn_backend_vsi_npu/test/: CMakeLists.txt  NpuCreateWorkloadTests.cpp  NpuEndToEndTests.cpp  NpuLayerSupportTests.cpp  NpuLayerTests.cpp  NpuRuntimeTests.cpp  NpuWorkloadFactoryHelper.hpp
nn_runtime/armnn_backend_vsi_npu/workloads/: CMakeLists.txt  FakeBiasSelector.hpp  NpuActivationWorkload.hpp  NpuArgMinMaxWorkload.hpp  NpuBatchNormalizationWorkload.hpp  NpuBatchToSpaceNdWorkload.hpp  NpuComparisonWorkload.hpp  NpuConcatWorkload.hpp  NpuConstantWorkload.hpp  NpuConvolution2dWorkload.hpp  NpuDepthToSpaceWorkload.hpp  NpuDepthWiseConvolution2dWorkload.hpp  NpuDetectionPostProcessWorkload.hpp  NpuElementwiseUnarytWorkload.hpp  NpuElementwiseWorkload.hpp  NpuEqualWorkload.hpp  NpuFullyConnectedWorkload.hpp  NpuGatherWorkload.hpp  NpuGreaterWorkload.hpp  NpuInstanceNormWorkload.hpp  NpuL2NormalizationWorkload.hpp  NpuLogSoftmaxWorkload.hpp  NpuLstmWorkload.hpp  NpuMeanWorkload.hpp  NpuNormalizationWorkload.hpp  NpuPadWorkload.hpp  NpuPermuteWorkload.hpp  NpuPooling2dWorkload.hpp  NpuPreluWorkload.hpp  NpuReshapeWorkload.hpp  NpuResizeWorkload.hpp  NpuRsqrtWorkload.hpp  NpuSliceWorkload.hpp  NpuSoftmaxWorkload.hpp  NpuSpaceToBatchNdWorkload.hpp  NpuSpaceToDepthWorkload.hpp  NpuSplitterWorkload.hpp  NpuStridedSliceWorkload.hpp  NpuTensorCopyWorkload.hpp  NpuTransposeConvolution2dWorkload.hpp  (+2 more)
nn_runtime/armnn_npu_backend/: NpuTensorHandleFactory.cpp  NpuTensorHandleFactory.hpp
nn_runtime/nnapi_delegate/: BUILD  COPYRIGHTS  NeuralNetworks.cpp  NeuralNetworks.h  makefile.linux  nnapi.vcxproj  nnapi.vcxproj.filters
nn_runtime/nnrt/: Android.mk  BUILD  COPYRIGHTS  compilation.cpp  compilation.hpp  error.hpp  event.cpp  execution.cpp  execution_io.hpp  execution_task.cpp  execution_task.hpp  file_map_memory.cpp  file_map_memory.hpp  git_head_version.sh  logging.cpp  logging.hpp  makefile.linux  memory_pool.cpp  model.cpp  model.hpp  nnrt.vcxproj  nnrt.vcxproj.filters  ovxlib_delegate.cpp  ovxlib_delegate.hpp  permute_vector.hpp  prepared_model.cpp  prepared_model.hpp  shared_context.hpp  types.hpp  utils.cpp  utils.hpp  version.hpp
nn_runtime/nnrt/dump_model/inference_model/: BUILD.bazel  interpreter.cpp  interpreter.h
nn_runtime/onnxrt_vsi_npu_xp/: 0001-VSI_NPU-the-patch-for-ONNXRuntime-framework.patch  0002-fix-bug-for-ONNXRuntime-v1.1.2.patch  README.md
nnapi/: ACompilation.cpp  ACompilation.h  AEvent.cpp  AEvent.h  AExecution.cpp  AExecution.h  AMemory.cpp  AMemory.h  AModel.cpp  AModel.h  ATypeDef.h  Android.mk  NeuralNetworks.cpp  NeuralNetworks.h  NeuralNetworksOEM.h  json-forwards.h  json.h  jsoncpp.cpp  makefile.linux  makefile.linux.def  readme.md  util.cpp  util.h
nnrt/: execution.hpp  model.hpp  permute_vector.hpp  types.hpp
nnrt/model_transform/: transformations.hpp
ovxlib/: Android.mk  BUILD  LICENSE  README.md  WORKSPACE  bazel_gen_feature_config_header.sh  build_package.sh  gcc_gen_feature_config_header.sh  make.sh  makefile.linux  ovxlib.2012.vcxproj  ovxlib.2012.vcxproj.filters  ovxlib.2019.vcxproj  ovxlib.2019.vcxproj.filters  ovxlib.jenkins.2012.sln  ovxlib.jenkins.sln  ovxlib.vcxproj  ovxlib.vcxproj.filters  release_notes.txt  setup_env.sh  viv_sdk.BUILD  vsi_feature_config  vsi_feature_config_63x  vsi_feature_config_64x  vsi_feature_config_64x_40bit_va  workspace.bzl
ovxlib/doc/: How_to_add_customer_layer_into_ovxlib.md  build_guide.txt  ovxlib_doxygen.conf
ovxlib/hal/: Android.mk  README  VsiDevice.cpp  VsiDevice.h  VsiDriver.cpp  VsiDriver.rc  VsiPreparedModel.cpp  VsiPreparedModel.h  debug.sh  install.sh  install_viv.sh  viv_debug.sh
ovxlib/include/: jconfig.h  jmorecfg.h  jpeglib.h  vsi_nn_assert.h  vsi_nn_client_op.h  vsi_nn_context.h  vsi_nn_error.h  vsi_nn_graph.h  vsi_nn_internal_node.h  vsi_nn_log.h  vsi_nn_node.h  vsi_nn_node_attr_template.h  vsi_nn_node_type.h  vsi_nn_ops.h  vsi_nn_platform.h  vsi_nn_post.h  vsi_nn_pre_post_process.h  vsi_nn_prv.h  vsi_nn_pub.h  vsi_nn_rnn.h  vsi_nn_rnn_prv.h  (+5 more)
ovxlib/tools/rockchips_toybrick_compiler/linaro_linux_gcc/: BUILD.bazel  aarch64-linux-gnu-ar  aarch64-linux-gnu-as  aarch64-linux-gnu-gcc  aarch64-linux-gnu-gcov  aarch64-linux-gnu-ld  aarch64-linux-gnu-nm  aarch64-linux-gnu-objcopy  aarch64-linux-gnu-objdump  aarch64-linux-gnu-strip
(+1435 files in other folders)
